Bug 1962061 - Fix sqlite-vec build on Solaris.r=asuth

Adds patches to sqlite-vec since we need them while waiting for upstream pulls.

Replaces `replace-in-file` vendoring option with a .patch file for now, as
otherwise it forces CRLF line endings due to bug 1963411.
Keeping a list of patches is cleaner anyway.

Some files are being replaced due to CRLF -> LF conversion.

Differential Revision: https://phabricator.services.mozilla.com/D247229