third_party/sqlite3/ext/sqlite-vec/sqlite-vec.c
@@ -65,9 +65,11 @@ SQLITE_EXTENSION_INIT3
 #ifndef __EMSCRIPTEN__
 #ifndef __COSMOPOLITAN__
 #ifndef __wasi__
+#ifndef __sun__
 typedef u_int8_t uint8_t;
 typedef u_int16_t uint16_t;
 typedef u_int64_t uint64_t;
+#endif
 #endif
 #endif
 #endif
